force-app/main/default/objects/Temporal_Regatas__c/fields/NUM_INSCRITOS__c.field-meta.xml
<CustomField>
    <fullName>NUM_INSCRITOS__c</fullName>
    <label>NUM_INSCRITOS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>