force-app/main/default/objects/Temporal_Regatas__c/fields/RG_ANO__c.field-meta.xml
<CustomField>
    <fullName>RG_ANO__c</fullName>
    <label>RG_ANO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>