force-app/main/default/objects/Temporal_Regatas__c/fields/RG_FECFIN__c.field-meta.xml
<CustomField>
    <fullName>RG_FECFIN__c</fullName>
    <label>RG_FECFIN</label>
    <type>Date</type>
</CustomField>