force-app/main/default/objects/Temporal_Regatas__c/fields/RG_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>RG_FECHAS__c</fullName>
    <label>RG_FECHAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>