force-app/main/default/objects/Temporal_Regatas__c/fields/RG_FECINI__c.field-meta.xml
<CustomField>
    <fullName>RG_FECINI__c</fullName>
    <label>RG_FECINI</label>
    <type>Date</type>
</CustomField>