force-app/main/default/objects/Temporal_Regatas__c/fields/RG_INSCRIP__c.field-meta.xml
<CustomField>
    <fullName>RG_INSCRIP__c</fullName>
    <label>RG_INSCRIP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>