force-app/main/default/objects/Temporal_Regatas__c/fields/RG_INVERSA__c.field-meta.xml
<CustomField>
    <fullName>RG_INVERSA__c</fullName>
    <label>RG_INVERSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>