force-app/main/default/objects/Temporal_Regatas__c/fields/RG_LICFED__c.field-meta.xml
<CustomField>
    <fullName>RG_LICFED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RG_LICFED</label>
    <type>Checkbox</type>
</CustomField>