force-app/main/default/objects/Temporal_Regatas__c/fields/RG_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>RG_LUGAR__c</fullName>
    <label>RG_LUGAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>