force-app/main/default/objects/Temporal_Regatas__c/fields/RG_NOMBRE__c.field-meta.xml
<CustomField>
    <fullName>RG_NOMBRE__c</fullName>
    <label>RG_NOMBRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>