force-app/main/default/objects/Temporal_Regatas__c/fields/RG_NUMREG__c.field-meta.xml
<CustomField>
    <fullName>RG_NUMREG__c</fullName>
    <label>RG_NUMREG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>