force-app/main/default/objects/Temporal_Regatas__c/fields/RG_OBLICU__c.field-meta.xml
<CustomField>
    <fullName>RG_OBLICU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RG_OBLICU</label>
    <type>Checkbox</type>
</CustomField>