force-app/main/default/objects/Temporal_Regatas__c/fields/RG_ORGANI__c.field-meta.xml
<CustomField>
    <fullName>RG_ORGANI__c</fullName>
    <label>RG_ORGANI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>