force-app/main/default/objects/Temporal_Regatas__c/fields/RG_ORIGEN__c.field-meta.xml
<CustomField>
    <fullName>RG_ORIGEN__c</fullName>
    <label>RG_ORIGEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>