force-app/main/default/objects/Temporal_Regatas__c/fields/RG_TIPO__c.field-meta.xml
<CustomField>
    <fullName>RG_TIPO__c</fullName>
    <label>RG_TIPO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>