force-app/main/default/objects/Temporal_Regatas__c/fields/salesforce_id__c.field-meta.xml
<CustomField>
    <fullName>salesforce_id__c</fullName>
    <label>salesforce_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>