force-app/main/default/objects/Temporal_Regatas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>RG_ANO__c</columns>
    <columns>DDDKEY__c</columns>
    <columns>RG_NUMREG__c</columns>
    <columns>RG_LUGAR__c</columns>
    <columns>RG_ORIGEN__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All Records</label>
</ListView>